# automl

./: .gitignore  LICENSE  README.md  install.sh  install_env.bat  pyproject.toml  requirements.txt
src/automatedML/: __init__.py  componentfactory.py  datacontainer.py  evalmodel.py  internal.py
src/automatedML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/automatedML/ann/: __init__.py  architecture.py  base.py  parallel.py  utils.py
src/automatedML/annmodels/: __init__.py  alexnet.py  cnn.py  fcnn.py  mlp.py  rnn.py
src/automatedML/component/: __init__.py  basecomponent.py  settings.py
src/automatedML/engine/: __init__.py  methods.py  tempfolder.py
src/automatedML/flatgenerator/: __init__.py  generator.py
src/automatedML/models/: __init__.py  activationlayer.py  algebralayer.py  attentionrecurrentlayer.py  autoencoder1dblock.py  autoencoder2dblock.py  averagepooling1dlayer.py  averagepooling2dlayer.py  averagepoolinglayer.py  baselayer.py  batchnormalization.py  bilstmllayer.py  convnextblock.py  convolutional1dlayer.py  convolutional2dlayer.py  convolutionalLSTMlayer.py  convolutionalblock.py  convolutionallayer.py  deconvolutional1dlayer.py  deconvolutional2dlayer.py  deconvolutionallayer.py  (+29 more)
tests/: custom_layer.py  lab.py  test_ann.py  test_annmodel.py  test_datacontain.py  test_evalmodel.py  test_flatgenerator.py  test_hyperparamsopt.py  test_model.py  test_optimizator.py  test_parallelmodel.py  testcommon.py
tests/anns/: test_ann_3.json  test_ann_4.json
tests/datasets/: testX-custom.csv  testY-custom.csv  trainY-custom.csv
(+29 files in other folders)
